    primeser: the second argument may be left unset
    fixed parsing of pitch literals
    new built-in functions: mc2f, f2mc, minimum, maximum
    fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    dot operator can be preceded by whitespace
    _= operator optimized
    :* operator returns null for non-negative repeat counts

- all the bell-compliant objects:
    fixed potential crash when reloading a file or re-opening the text editor
    "expr" and "lambda" message processing is now deferred, not deferlow-ed unless at object instantiation

- all the bell-compliant objects except bach.eval:
    fixed very general issue preventing objects from working unless they had a bell lambda function

- bach.reg, bach.value, bach.pv
    Fixed memory leak related to the text editor window

- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
    XML import and export: three-quarters-sharp and -flat accidentals have correct name now (was "three-quarter")
        complex time signatures are correctly handled

- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        New "importsubdivisions" message attribute
    exportmidi: new "exportbarlines" message attribute
        new "exportdivisions" message attribute

- bach.shelf: fixed crash with @embed 1 when reopening patch







v0.8.1b

Scroll down for very important things you should now about v0.8b

**********************
*** VERY IMPORTANT ***
**********************

- bach has switched to square brackets [] instead of parens ().
  	THIS WILL NOT BREAK BACKWARD COMPATIBILITY and you can still continue using () if you liked them.